--- a/when-the-sun-has-set.html
+++ b/when-the-sun-has-set.html
@@ -10,6 +10,6 @@
 </head>
 
 <body>
-	<script src="js/catharsis.js"></script>
+	<script src="js/when-the-sun-has-set.js"></script>
 </body>
 </html>
