Moved external libs

--- a/distortion.html
+++ b/distortion.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-	<img src="assets/distortion.png" class="fullscreen" alt="">
+	<img src="assets/end-screens/distortion.png" class="fullscreen" alt="">
 </body>
 </html>
