--- a/drive.html
+++ b/drive.html
@@ -5,9 +5,9 @@
 	<title>Drive</title>
 	
 	<link rel="stylesheet" href="styles.css">
-	<script src="js/p5.js"></script>
-	<script src="js/p5.sound.js"></script>
-	<script src="js/p5.gif.js"></script>
+	<script src="js/lib/p5.js"></script>
+	<script src="js/lib/p5.sound.js"></script>
+	<script src="js/lib/p5.gif.js"></script>
 </head>
 
 <body>
