--- a/not-found.html
+++ b/not-found.html
@@ -13,7 +13,7 @@
 	<h2 class="errorText">The requested resource could not be found</h2>
 	
 	<div class="errorImage">
-		<img src="assets/error.png" alt="">
+		<img src="assets/end-screens/error.png" alt="">
 	</div>
 	
 	<div class="errorText">
