--- a/radio.html
+++ b/radio.html
@@ -5,8 +5,8 @@
 	<title>Listen</title>
 	<link rel="stylesheet" href="styles.css">
 	
-	<script src="js/p5.js"></script>
-	<script src="js/p5.sound.js"></script>
+	<script src="js/lib/p5.js"></script>
+	<script src="js/lib/p5.sound.js"></script>
 </head>
 
 <body>
