--- a/the-door.html
+++ b/the-door.html
@@ -5,8 +5,8 @@
 	<title>The Door</title>
 	
 	<link rel="stylesheet" href="styles.css">
-	<script src="js/p5.js"></script>
-	<script src="js/p5.glitch.js"></script>
+	<script src="js/lib/p5.js"></script>
+	<script src="js/lib/p5.glitch.js"></script>
 </head>
 
 <body>
