--- a/when-the-sun-has-set.html
+++ b/when-the-sun-has-set.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>When The Sun Has Set</title>
 	
-	<script src="js/p5.js"></script>
-	<script src="js/p5.sound.js"></script>
+	<script src="js/lib/p5.js"></script>
+	<script src="js/lib/p5.sound.js"></script>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
